samples/_failures_safe/1761279617_9ae07e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bb50c027.c: In function ‘main’:
./samples/SAFE/__tmp_bb50c027.c:140:17: error: expected expression at end of input
  140 |                 for (int j =
      |                 ^~~
./samples/SAFE/__tmp_bb50c027.c:140:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bb50c027.c:140:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bb50c027.c:140:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bb50c027.c:140:17: error: expected declaration or statement at end of input
